--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "@nestjs/typeorm": "^9.0.0",
     "@types/bcrypt": "^5.0.0",
     "@types/cookie-session": "^2.0.44",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/passport-jwt": "^3.0.6",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "cookie-session": "^2.0.0",
+    "jsonwebtoken": "^8.5.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
